; ModuleID = '/home/carl/AnghaBench/mimikatz/mimikatz/modules/extr_kuhl_m_privilege.c_kuhl_m_privilege_simple.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimikatz/modules/extr_kuhl_m_privilege.c_kuhl_m_privilege_simple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i32] [i32 80, i32 114, i32 105, i32 118, i32 105, i32 108, i32 101, i32 103, i32 101, i32 32, i32 39, i32 37, i32 117, i32 39, i32 32, i32 79, i32 75, i32 10, i32 0], align 4
@.str.1 = private unnamed_addr constant [30 x i32] [i32 82, i32 116, i32 108, i32 65, i32 100, i32 106, i32 117, i32 115, i32 116, i32 80, i32 114, i32 105, i32 118, i32 105, i32 108, i32 101, i32 103, i32 101, i32 32, i32 40, i32 37, i32 117, i32 41, i32 32, i32 37, i32 48, i32 56, i32 120, i32 10, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kuhl_m_privilege_simple(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @TRUE, align 4
  %7 = load i32, i32* @FALSE, align 4
  %8 = call i32 @RtlAdjustPrivilege(i32 %5, i32 %6, i32 %7, i32* %3)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i64 @NT_SUCCESS(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %1
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @kprintf(i8* bitcast ([19 x i32]* @.str to i8*), i32 %13)
  br label %19

15:                                               ; preds = %1
  %16 = load i32, i32* %2, align 4
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @PRINT_ERROR(i8* bitcast ([30 x i32]* @.str.1 to i8*), i32 %16, i32 %17)
  br label %19

19:                                               ; preds = %15, %12
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}

declare dso_local i32 @RtlAdjustPrivilege(i32, i32, i32, i32*) #1

declare dso_local i64 @NT_SUCCESS(i32) #1

declare dso_local i32 @kprintf(i8*, i32) #1

declare dso_local i32 @PRINT_ERROR(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
